Bugfix: Scrollbar moves all contents

--- a/src/components/comp.styles/SpecPDF.css
+++ b/src/components/comp.styles/SpecPDF.css
@@ -45,6 +45,7 @@
     margin-left: 30px;
     margin-right: 10px;
     overflow-y:auto;
+    overflow-x: hidden
 }
 
 .specbody::-webkit-scrollbar {
@@ -67,22 +68,33 @@
 
 .sbcontent {
     margin-right: 20px;
+}
+
+.scrollpdf, .spec_tbl {
     overflow-x:scroll;
     margin-bottom: 10px;
 }
 
-.sbcontent::-webkit-scrollbar {
+.scrollpdf {
+    margin-top: -17px;
+}
+
+.atablea, .emptyscrollpdf {
+    width: 140%;
+}
+
+.scrollpdf::-webkit-scrollbar, .spec_tbl::-webkit-scrollbar {
     height: 13px;
 }
 
-.sbcontent::-webkit-scrollbar-track {
+.scrollpdf::-webkit-scrollbar-track {
     background-color: white;
     border-radius: 5px;
     margin-left: 5px;
     margin-right: 5px;
 }
 
-.sbcontent::-webkit-scrollbar-thumb {
+.scrollpdf::-webkit-scrollbar-thumb {
     background: rgba(172,192,226,255);
     border-radius: 5px;
     background-clip: content-box;
@@ -125,7 +137,6 @@
 }
 
 .specpart-table {
-    width: 100%;
     height: fit-content;
 }
 
@@ -140,15 +151,20 @@
 }
 
 .speccode {
-    width: 50px;
+    width: 60px;
 }
 
 .infoHeader {
-    width: 20%;
+    width: 30px;
 }
 
 .subspectitle {
     width: 20px;
+}
+
+.comp_tbl {
+    margin-top: -20px;
+    margin-right: -13px;
 }
 
 .speccomp-table th, td {
